@@ -1720,6 +1720,9 @@ Release 2.7.3 - UNRELEASED
 
   OPTIMIZATIONS
 
+    HADOOP-12810. FileSystem#listLocatedStatus causes unnecessary RPC calls
+    (Ryan Blue via vinayakumarb)
+
   BUG FIXES
 
     HADOOP-12296. when setnetgrent returns 0 in linux, exception should be
